Fix wallpaper image for mobile design, fix spacing for desktop deisgn

--- a/konbini-life/src/assets/sass/layout/_article.sass
+++ b/konbini-life/src/assets/sass/layout/_article.sass
@@ -28,7 +28,7 @@
         bottom: 0
         left: 0
         transform-origin: top right
-        transform: skewY(-4deg)
+        transform: skewY(-2deg)
         z-index: -1
 
 header
