--- a/konbini-life/src/assets/sass/layout/_footer.sass
+++ b/konbini-life/src/assets/sass/layout/_footer.sass
@@ -6,7 +6,7 @@
 // FOOTER
 // ======
 
-// # DESKTOP VIEW
+// # DESKTOP VIEW || DEFAULT
 footer
     text-align: center
     padding-top: space.$desktop-space-lv-5
@@ -29,12 +29,6 @@ footer
         padding-top: space.$mobile-space-lv-5
         .container-email
             margin-bottom: space.$mobile-space-lv-4
-            a
-                color: #000
-                text-decoration: underline
-                cursor: pointer
-                &:hover
-                    text-decoration: none
         .container-copywrite
             @include space.mobile-padding-preset
             padding-top: space.$mobile-space-lv-2
